cpp_sdk/examples/sdk_test_cpp/src/errorcompile.txt
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:18:
../../../sdk/include\spacetimedb/bsatn/writer.h:29:47: error: no member named 'sdk' in namespace 'SpacetimeDb'
   29 |         void write_u256_le(const SpacetimeDb::sdk::u256_placeholder& value);
      |                                  ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:36:47: error: no member named 'sdk' in namespace 'SpacetimeDb'
   36 |         void write_i256_le(const SpacetimeDb::sdk::i256_placeholder& value);
      |                                  ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:80:54: error: no member named 'sdk' in namespace 'SpacetimeDb'
   80 |         inline void write_u256_le(const SpacetimeDb::sdk::u256_placeholder& value) {
      |                                         ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:85:54: error: no member named 'sdk' in namespace 'SpacetimeDb'
   85 |         inline void write_i256_le(const SpacetimeDb::sdk::i256_placeholder& value) {
      |                                         ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:141:57: error: no member named 'sdk' in namespace 'SpacetimeDb'
  141 |     inline void serialize(Writer& w, const SpacetimeDb::sdk::u256_placeholder& value) { w.write_u256_le(value); }
      |                                            ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:147:57: error: no member named 'sdk' in namespace 'SpacetimeDb'
  147 |     inline void serialize(Writer& w, const SpacetimeDb::sdk::i256_placeholder& value) { w.write_i256_le(value); }
      |                                            ~~~~~~~~~~~~~^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:94:42: error: member access into incomplete type 'SpacetimeDb::bsatn::Reader'
   94 |                 timestamp_micros = reader.read_u64_le(); // Assuming read_u64_le for consistency
      |                                          ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:6:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    6 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:113:28: error: member access into incomplete type 'SpacetimeDb::bsatn::Reader'
  113 |                 id = reader.read_u64_le();
      |                            ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:6:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    6 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:129:37: error: member access into incomplete type 'SpacetimeDb::bsatn::Reader'
  129 |                 nanoseconds = reader.read_i64_le();
      |                                     ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:6:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    6 |         class Reader;
      |               ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:142:88: error: member access into incomplete type 'SpacetimeDb::bsatn::Reader'
  142 |             void bsatn_deserialize(SpacetimeDb::bsatn::Reader& reader) { *this = reader.read_u256_le(); }
      |                                                                                        ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:6:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    6 |         class Reader;
      |               ^
C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot/include/c++/v1\__compare/synth_three_way.h:28:65: note: unnamed type used in template argument was declared here
   28 | _LIBCPP_HIDE_FROM_ABI inline constexpr auto __synth_three_way = []<class _Tp, class _Up>(const _Tp& __t, const _Up& __u)
      |                                                                 ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:152:88: error: member access into incomplete type 'SpacetimeDb::bsatn::Reader'
  152 |             void bsatn_deserialize(SpacetimeDb::bsatn::Reader& reader) { *this = reader.read_i256_le(); }
      |                                                                                        ^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:6:15: note: forward declaration of 'SpacetimeDb::bsatn::Reader'
    6 |         class Reader;
      |               ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
../../../sdk/include\spacetimedb/macros.h:135:67: error: unknown type name 'CppTypeName'
  135 | inline void serialize(::SpacetimeDb::bsatn::Writer& writer, const CppTypeName& value) {
      |                                                                   ^
../../../sdk/include\spacetimedb/macros.h:140:8: error: unknown type name 'CppTypeName'
  140 | inline CppTypeName deserialize<CppTypeName>(::SpacetimeDb::bsatn::Reader& reader) {
      |        ^
../../../sdk/include\spacetimedb/macros.h:140:32: error: use of undeclared identifier 'CppTypeName'
  140 | inline CppTypeName deserialize<CppTypeName>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                ^~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:144:7: error: extraneous closing brace ('}')
  144 |     } \
      |       ^
../../../sdk/include\spacetimedb/macros.h:296:67: error: unknown type name 'CppTypeName'
  296 | inline void serialize(::SpacetimeDb::bsatn::Writer& writer, const CppTypeName& value) {
      |                                                                   ^
../../../sdk/include\spacetimedb/macros.h:298:22: error: use of undeclared identifier 'SPACETIMEDB_XX_SERIALIZE_FIELD'
  298 |         FIELDS_MACRO(SPACETIMEDB_XX_SERIALIZE_FIELD, writer, value); \
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:301:8: error: unknown type name 'CppTypeName'
  301 | inline CppTypeName deserialize<CppTypeName>(::SpacetimeDb::bsatn::Reader& reader) {
      |        ^
../../../sdk/include\spacetimedb/macros.h:301:32: error: use of undeclared identifier 'CppTypeName'
  301 | inline CppTypeName deserialize<CppTypeName>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                ^~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:306:7: error: extraneous closing brace ('}')
  306 |     } \
      |       ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:109:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  109 |         SpacetimeDb::sdk::Identity q;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:110:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  110 |         SpacetimeDb::sdk::ConnectionId r; // Assuming this is a type from spacetimedb_sdk_types.h
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:111:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  111 |         SpacetimeDb::sdk::Timestamp s;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:112:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  112 |         SpacetimeDb::sdk::TimeDuration t; // Assuming this is a type from spacetimedb_sdk_types.h
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:182:21: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  182 |         std::vector<SpacetimeDb::sdk::Identity> q;
      |                     ^~~~~~~~~~~~~~~~
      |                     sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:183:21: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  183 |         std::vector<SpacetimeDb::sdk::ConnectionId> r;
      |                     ^~~~~~~~~~~~~~~~
      |                     sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:184:21: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  184 |         std::vector<SpacetimeDb::sdk::Timestamp> s;
      |                     ^~~~~~~~~~~~~~~~
      |                     sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:185:21: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  185 |         std::vector<SpacetimeDb::sdk::TimeDuration> t;
      |                     ^~~~~~~~~~~~~~~~
      |                     sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:261:12: error: no type named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp'; did you mean simply 'EnumWithPayloadTag'?
  261 |     inline sdk_test_cpp::EnumWithPayloadTag deserialize<sdk_test_cpp::EnumWithPayloadTag>(::SpacetimeDb::bsatn::Reader& reader) {
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            EnumWithPayloadTag
.\sdk_test.h:242:16: note: 'EnumWithPayloadTag' declared here
  242 |     enum class EnumWithPayloadTag : uint8_t {
      |                ^
.\sdk_test.h:261:71: error: no member named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp'
  261 |     inline sdk_test_cpp::EnumWithPayloadTag deserialize<sdk_test_cpp::EnumWithPayloadTag>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                                                       ^~~~~~~~~~~~~~~~~~
.\sdk_test.h:268:23: error: no type named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp'; did you mean 'EnumWithPayload'?
  268 |         sdk_test_cpp::EnumWithPayloadTag tag;
      |         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
      |                       EnumWithPayload
.\sdk_test.h:267:12: note: 'EnumWithPayload' declared here
  267 |     struct EnumWithPayload {
      |            ^
.\sdk_test.h:268:42: error: field has incomplete type 'sdk_test_cpp::EnumWithPayload'
  268 |         sdk_test_cpp::EnumWithPayloadTag tag;
      |                                          ^
.\sdk_test.h:267:12: note: definition of 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::EnumWithPayload' is not complete until the closing '}'
  267 |     struct EnumWithPayload {
      |            ^
.\sdk_test.h:272:47: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  272 |             bool, float, double, std::string, SpacetimeDb::sdk::Identity, SpacetimeDb::sdk::ConnectionId,
      |                                               ^~~~~~~~~~~~~~~~
      |                                               sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:272:75: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  272 |             bool, float, double, std::string, SpacetimeDb::sdk::Identity, SpacetimeDb::sdk::ConnectionId,
      |                                                                           ^~~~~~~~~~~~~~~~
      |                                                                           sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:273:13: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  273 |             SpacetimeDb::sdk::Timestamp, std::vector<uint8_t>, std::vector<int32_t>,
      |             ^~~~~~~~~~~~~~~~
      |             sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:486:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  486 |         SpacetimeDb::sdk::Identity n;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:496:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  496 |         SpacetimeDb::sdk::ConnectionId n;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:506:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  506 |         SpacetimeDb::sdk::Timestamp n;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:652:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  652 |         SpacetimeDb::sdk::Identity i;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:671:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  671 |         SpacetimeDb::sdk::ConnectionId c; // Assuming ConnectionId is a distinct type
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:711:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  711 |         SpacetimeDb::sdk::Identity q;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:712:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  712 |         SpacetimeDb::sdk::ConnectionId r;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:713:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  713 |         SpacetimeDb::sdk::Timestamp s;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:714:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  714 |         SpacetimeDb::sdk::TimeDuration t;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:826:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  826 |         SpacetimeDb::sdk::ScheduleAt scheduled_at;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:898:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  898 |         SpacetimeDb::sdk::Identity identity; // PK
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:968:9: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
  968 |         SpacetimeDb::sdk::Identity i;
      |         ^~~~~~~~~~~~~~~~
      |         sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:1040:46: error: no member named 'sdk' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb'; did you mean simply 'sdk'?
 1040 |     struct OptionIdentityRow { std::optional<SpacetimeDb::sdk::Identity> n; };
      |                                              ^~~~~~~~~~~~~~~~
      |                                              sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:32:15: note: 'sdk' declared here
   32 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:1075:5: error: expected member name or ';' after declaration specifiers
 1075 |     SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS(
      |     ^
../../../sdk/include\spacetimedb/macros.h:285:17: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  285 |                 ); \
      |                 ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:1087:1: error: expected ')'
 1087 | })
      | ^
.\sdk_test.h:1075:5: note: to match this '('
 1075 |     SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS(
      |     ^
../../../sdk/include\spacetimedb/macros.h:281:77: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  281 |                 ::SpacetimeDb::ModuleSchema::instance().register_struct_type( \
      |                                                                             ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:1075:5: error: expected ';' after struct
 1075 |     SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS(
      |     ^
../../../sdk/include\spacetimedb/macros.h:287:9: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  287 |         }; \
      |         ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:1075:5: error: unknown type name 'Registersdk_test_cpp_VecOptionI32'; did you mean 'ModuleRegistration::Registersdk_test_cpp_VecOptionI32'?
../../../sdk/include\spacetimedb/macros.h:288:16: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  288 |         static SPACETIMEDB_PASTE(Register, SanitizedCppTypeName) SPACETIMEDB_PASTE(register_, SPACETIMEDB_PASTE(SanitizedCppTypeName, _instance)); \
      |                ^
../../../sdk/include\spacetimedb/macros.h:21:33: note: expanded from macro 'SPACETIMEDB_PASTE'
   21 | #define SPACETIMEDB_PASTE(a, b) SPACETIMEDB_PASTE_IMPL(a, b)
      |                                 ^
../../../sdk/include\spacetimedb/macros.h:20:38: note: expanded from macro 'SPACETIMEDB_PASTE_IMPL'
   20 | #define SPACETIMEDB_PASTE_IMPL(a, b) a##b
      |                                      ^
<scratch space>:20:1: note: expanded from here
   20 | Registersdk_test_cpp_VecOptionI32
      | ^
.\sdk_test.h:1075:5: note: 'ModuleRegistration::Registersdk_test_cpp_VecOptionI32' declared here
../../../sdk/include\spacetimedb/macros.h:279:16: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  279 |         struct SPACETIMEDB_PASTE(Register, SanitizedCppTypeName) { \
      |                ^
../../../sdk/include\spacetimedb/macros.h:21:33: note: expanded from macro 'SPACETIMEDB_PASTE'
   21 | #define SPACETIMEDB_PASTE(a, b) SPACETIMEDB_PASTE_IMPL(a, b)
      |                                 ^
../../../sdk/include\spacetimedb/macros.h:20:38: note: expanded from macro 'SPACETIMEDB_PASTE_IMPL'
   20 | #define SPACETIMEDB_PASTE_IMPL(a, b) a##b
      |                                      ^
<scratch space>:17:1: note: expanded from here
   17 | Registersdk_test_cpp_VecOptionI32
      | ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:1088:1: error: expected unqualified-id
 1088 | );
      | ^
sdk_test.cpp:14:27: error: cannot define or redeclare 'bsatn_serialize' here because namespace 'sdk_test_cpp' does not enclose namespace 'EnumWithPayload'
   14 |     void EnumWithPayload::bsatn_serialize(::SpacetimeDb::bsatn::Writer& writer) const {
      |          ~~~~~~~~~~~~~~~~~^
sdk_test.cpp:16:49: error: invalid use of 'this' outside of a non-static member function
   16 |         ::SpacetimeDb::bsatn::serialize(writer, this->tag);
      |                                                 ^
sdk_test.cpp:16:41: error: use of undeclared identifier 'writer'; did you mean 'fwrite'?
   16 |         ::SpacetimeDb::bsatn::serialize(writer, this->tag);
      |                                         ^~~~~~
      |                                         fwrite
C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot/include\stdio.h:100:8: note: 'fwrite' declared here
  100 | size_t fwrite(const void *__restrict, size_t, size_t, FILE *__restrict);
      |        ^
sdk_test.cpp:19:22: error: use of undeclared identifier 'writer'
   19 |         std::visit([&writer](const auto& arg) {
      |                      ^~~~~~
sdk_test.cpp:20:45: error: use of undeclared identifier 'writer'; did you mean 'fwrite'?
   20 |             ::SpacetimeDb::bsatn::serialize(writer, arg);
      |                                             ^~~~~~
      |                                             fwrite
C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot/include\stdio.h:100:8: note: 'fwrite' declared here
  100 | size_t fwrite(const void *__restrict, size_t, size_t, FILE *__restrict);
      |        ^
sdk_test.cpp:21:16: error: invalid use of 'this' outside of a non-static member function
   21 |             }, this->value);
      |                ^
sdk_test.cpp:24:27: error: cannot define or redeclare 'bsatn_deserialize' here because namespace 'sdk_test_cpp' does not enclose namespace 'EnumWithPayload'
   24 |     void EnumWithPayload::bsatn_deserialize(::SpacetimeDb::bsatn::Reader& reader) {
      |          ~~~~~~~~~~~~~~~~~^
sdk_test.cpp:26:9: error: invalid use of 'this' outside of a non-static member function
   26 |         this->tag = ::SpacetimeDb::bsatn::deserialize<sdk_test_cpp::EnumWithPayloadTag>(reader);
      |         ^
sdk_test.cpp:26:69: error: no member named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp'
   26 |         this->tag = ::SpacetimeDb::bsatn::deserialize<sdk_test_cpp::EnumWithPayloadTag>(reader);
      |                                                                     ^~~~~~~~~~~~~~~~~~
sdk_test.cpp:26:89: error: use of undeclared identifier 'reader'
   26 |         this->tag = ::SpacetimeDb::bsatn::deserialize<sdk_test_cpp::EnumWithPayloadTag>(reader);
      |                                                                                         ^~~~~~
sdk_test.cpp:29:17: error: invalid use of 'this' outside of a non-static member function
   29 |         switch (this->tag) {
      |                 ^
sdk_test.cpp:30:14: error: use of undeclared identifier 'EnumWithPayloadTag'; did you mean 'EnumWithPayload'?
   30 |         case EnumWithPayloadTag::TagU8:
      |              ^~~~~~~~~~~~~~~~~~
      |              EnumWithPayload
.\sdk_test.h:267:12: note: 'EnumWithPayload' declared here
  267 |     struct EnumWithPayload {
      |            ^
sdk_test.cpp:30:34: error: no member named 'TagU8' in 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::EnumWithPayload'
   30 |         case EnumWithPayloadTag::TagU8:
      |                                  ^~~~~
sdk_test.cpp:31:13: error: invalid use of 'this' outside of a non-static member function
   31 |             this->value = reader.read_u8();
      |             ^
sdk_test.cpp:31:27: error: use of undeclared identifier 'reader'
   31 |             this->value = reader.read_u8();
      |                           ^~~~~~
sdk_test.cpp:33:14: error: use of undeclared identifier 'EnumWithPayloadTag'; did you mean 'EnumWithPayload'?
   33 |         case EnumWithPayloadTag::TagU16:
      |              ^~~~~~~~~~~~~~~~~~
      |              EnumWithPayload
.\sdk_test.h:267:12: note: 'EnumWithPayload' declared here
  267 |     struct EnumWithPayload {
      |            ^
sdk_test.cpp:33:34: error: no member named 'TagU16' in 'SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::SpacetimeDb::bsatn::sdk_test_cpp::EnumWithPayload'
   33 |         case EnumWithPayloadTag::TagU16:
      |                                  ^~~~~~
sdk_test.cpp:34:13: error: invalid use of 'this' outside of a non-static member function
   34 |             this->value = reader.read_u16_le();
      |             ^
sdk_test.cpp:34:27: error: use of undeclared identifier 'reader'
   34 |             this->value = reader.read_u16_le();
      |                           ^~~~~~
sdk_test.cpp:36:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   36 |         case EnumWithPayloadTag::TagU32:
      |              ^
sdk_test.cpp:37:13: error: invalid use of 'this' outside of a non-static member function
   37 |             this->value = reader.read_u32_le();
      |             ^
sdk_test.cpp:37:27: error: use of undeclared identifier 'reader'
   37 |             this->value = reader.read_u32_le();
      |                           ^~~~~~
sdk_test.cpp:39:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   39 |         case EnumWithPayloadTag::TagU64:
      |              ^
sdk_test.cpp:40:13: error: invalid use of 'this' outside of a non-static member function
   40 |             this->value = reader.read_u64_le();
      |             ^
sdk_test.cpp:40:27: error: use of undeclared identifier 'reader'
   40 |             this->value = reader.read_u64_le();
      |                           ^~~~~~
sdk_test.cpp:42:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   42 |         case EnumWithPayloadTag::TagU128:
      |              ^
sdk_test.cpp:46:13: error: invalid use of 'this' outside of a non-static member function
   46 |             this->value = reader.read_u128_le();
      |             ^
sdk_test.cpp:46:27: error: use of undeclared identifier 'reader'
   46 |             this->value = reader.read_u128_le();
      |                           ^~~~~~
sdk_test.cpp:48:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   48 |         case EnumWithPayloadTag::TagU256:
      |              ^
sdk_test.cpp:51:13: error: invalid use of 'this' outside of a non-static member function
   51 |             this->value = reader.read_u256_le();
      |             ^
sdk_test.cpp:51:27: error: use of undeclared identifier 'reader'
   51 |             this->value = reader.read_u256_le();
      |                           ^~~~~~
sdk_test.cpp:53:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   53 |         case EnumWithPayloadTag::TagI8:
      |              ^
sdk_test.cpp:54:13: error: invalid use of 'this' outside of a non-static member function
   54 |             this->value = reader.read_i8();
      |             ^
sdk_test.cpp:54:27: error: use of undeclared identifier 'reader'
   54 |             this->value = reader.read_i8();
      |                           ^~~~~~
sdk_test.cpp:56:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   56 |         case EnumWithPayloadTag::TagI16:
      |              ^
sdk_test.cpp:57:13: error: invalid use of 'this' outside of a non-static member function
   57 |             this->value = reader.read_i16_le();
      |             ^
sdk_test.cpp:57:27: error: use of undeclared identifier 'reader'
   57 |             this->value = reader.read_i16_le();
      |                           ^~~~~~
sdk_test.cpp:59:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   59 |         case EnumWithPayloadTag::TagI32:
      |              ^
sdk_test.cpp:60:13: error: invalid use of 'this' outside of a non-static member function
   60 |             this->value = reader.read_i32_le();
      |             ^
sdk_test.cpp:60:27: error: use of undeclared identifier 'reader'
   60 |             this->value = reader.read_i32_le();
      |                           ^~~~~~
sdk_test.cpp:62:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   62 |         case EnumWithPayloadTag::TagI64:
      |              ^
sdk_test.cpp:63:13: error: invalid use of 'this' outside of a non-static member function
   63 |             this->value = reader.read_i64_le();
      |             ^
sdk_test.cpp:63:27: error: use of undeclared identifier 'reader'
   63 |             this->value = reader.read_i64_le();
      |                           ^~~~~~
sdk_test.cpp:65:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   65 |         case EnumWithPayloadTag::TagI128:
      |              ^
sdk_test.cpp:67:13: error: invalid use of 'this' outside of a non-static member function
   67 |             this->value = reader.read_i128_le();
      |             ^
sdk_test.cpp:67:27: error: use of undeclared identifier 'reader'
   67 |             this->value = reader.read_i128_le();
      |                           ^~~~~~
sdk_test.cpp:69:14: error: use of undeclared identifier 'EnumWithPayloadTag'
   69 |         case EnumWithPayloadTag::TagI256:
      |              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
101 errors generated.
emcc: error: ''C:/Users/ludvi/emsdk/upstream/bin\clang.exe' -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr '--sysroot=C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot' -DEMSCRIPTEN -Xclang '-iwithsysroot/include\fakesdl' -Xclang '-iwithsysroot/include\compat' -std=c++20 -I../../../sdk/include -ferror-limit=100 -c sdk_test.cpp -o 'C:\Users\ludvi\AppData\Local\Temp\emscripten_temp_mqxpkir4\sdk_test_0.o'' failed (returned 1)
